--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,6 +1,13 @@
 .page {
 }
 
+.main {
+  width: 100vw;
+  min-height: 100vh;
+  box-sizing: border-box;
+  position: relative;
+}
+
 @media (prefers-color-scheme: dark) {
   .page {
   }
