--- a/src/app/components/loadingScreen/loadingScreen.css
+++ b/src/app/components/loadingScreen/loadingScreen.css
@@ -3,5 +3,117 @@
     height: 100vh;
     box-sizing: border-box;
     overflow: hidden;
-    
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: var(--bg-color);
+}
+
+.centerContainer {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    /* border: 1px solid white; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+.progress-circle {
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: rgba(95, 95, 95, 0);
+}
+
+.circle-bg {
+    opacity: 0.3;
+    /* Background circle transparency */
+}
+
+.circle-progress {
+    transform: rotate(-90deg);
+    /* Start at the top */
+    transform-origin: center;
+    transition: stroke-dashoffset 0.2s linear;
+    /* Smooth progress animation */
+}
+
+.progressTxt {
+    position: absolute;
+    top: 2rem;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 10px;
+    color: var(--brown-color);
+}
+
+
+.dog-container {
+    width: 80px;
+    height: 80px;
+    background-color: var(--brown-color);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    perspective: 100px;
+    /* Adds depth for 3D effect */
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+.dog-face {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dogImg {
+    height: max-content;
+    width: 60px;
+}
+
+
+
+
+.startBtn_container {
+    width: 11rem;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    align-items: center;
+    background-color: transparent;
+    border: 1px solid #b7ab98;
+    border-radius: 4.375rem;
+    bottom: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    color: #b7ab98;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-size: 12px;
+    height: 2.6rem;
+    justify-content: center;
+    opacity: 0;
+    outline: none;
+    /* pointer-events: none; */
+    text-transform: uppercase;
+    transition: background-color 0.3s ease-in, color 0.3s ease-in;
+    letter-spacing: 2.5px;
+    font-weight: bold;
+}
+
+.startBtn_container:hover {
+    background-color: var(--brown-color);
+    color: black;
+    cursor: pointer;
 }
