--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,4 +1,16 @@
 .page {
+  width: 100vw;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.page.fixedheight {
+  height: 100vh;
+  max-height: 100vh;
+}
+
+.page.dynamicHeight {
+  height: max-content;
 }
 
 .main {
