--- a/src/app/components/aboutSection/aboutSection.css
+++ b/src/app/components/aboutSection/aboutSection.css
@@ -2,23 +2,26 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
     color: var(--brown-color);
+    padding-left: var(--padding-left);
+    padding-top: var(--padding-left);
+    /* border: 1px solid white; */
 }
 
 .about-content-wrapper {
-    width: 80%;
+    width: max-content;
     align-items: flex-start;
     justify-content: flex-start;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1.5rem;
 }
 
 .section-name {
-    font-size: .9rem;
-    font-weight: 700;
+    font-size: .8rem;
+    font-weight: 600;
     letter-spacing: 4px;
     word-spacing: 10px;
     overflow-y: hidden;
