--- a/src/app/components/navbarFrame/navbarFrame.css
+++ b/src/app/components/navbarFrame/navbarFrame.css
@@ -4,20 +4,25 @@
 
     position: fixed;
     top: 0;
-    left: 0;
-    width: 100vw;
+    width: max-content;
     height: 100vh;
     color: var(--brown-color);
     box-sizing: border-box;
-
-    padding: 4.5rem;
     z-index: 95;
+}
+
+.navbarFrame-wrapper.left {
+    left: var(--padding-dist);
+}
+
+.navbarFrame-wrapper.right {
+    right: var(--padding-dist);
 }
 
 .logo_container {
     position: absolute;
     top: calc(var(--padding-dist) - .7rem);
-    left: var(--padding-dist);
+    left: 0;
 }
 
 
@@ -56,12 +61,11 @@
 
 
 .menu_container {
-    /* border: 1px solid white; */
     width: max-content;
     box-sizing: border-box;
     position: absolute;
     top: var(--padding-dist);
-    right: var(--padding-dist);
+    right: 0;
     display: flex;
     flex-direction: columns;
 }
@@ -105,7 +109,7 @@
     box-sizing: border-box;
     position: absolute;
     bottom: var(--padding-dist);
-    left: var(--padding-dist);
+    left: 0;
     display: flex;
     flex-direction: columns;
 }
@@ -115,13 +119,13 @@
     flex-direction: column;
     box-sizing: border-box;
 }
-
+ 
 
 .soundControl_container {
     box-sizing: border-box;
     position: absolute;
     bottom: var(--padding-dist);
-    right: var(--padding-dist);
+    right: 0;
     display: flex;
     align-items: center;
     justify-content: center;
