--- a/src/app/components/motto/motto.css
+++ b/src/app/components/motto/motto.css
@@ -6,6 +6,69 @@
     height: 90vh;
     background-color: var(--client-bg);
     color: var(--brown-color);
-    padding-left: var(--padding-left);
-    padding-top: 11rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2rem;
+    position: relative;
+} 
+
+.motto-bgContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    box-sizing: border-box;
+    z-index: 1;
+}
+
+.overlayWrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #0d0d0dc2;
+}
+
+.mottoBG {
+    width: 100%;
+    height: max-content;
+    object-fit: cover;
+}
+
+.motto-sectionName {
+    font-size: .9rem;
+    font-weight: 600;
+    letter-spacing: 4px;
+    word-spacing: 10px;
+    overflow-y: hidden;
+    text-transform: uppercase;
+    z-index: 4;
+}
+
+.mottoWords {
+    font-size: 6.5rem;
+    font-weight: 700;
+    line-height: 100%;
+    letter-spacing: -5px;
+    position: relative;
+    /* width: 80%; */
+    text-align: center;
+    z-index: 4;
+}
+
+.mottoAuthor {
+    font-size: .8rem;
+    font-weight: 600;
+    letter-spacing: 2px;
+    word-spacing: 10px;
+    overflow-y: hidden;
+    z-index: 4;
 }
