--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,6 +89,11 @@ body {
   font-family: "AvGard", sans-serif;
   background-color: var(--bg-color);
   color: var(--brown-color);
+
+  user-select: none; /* Prevent text selection */
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
 }
 
 body {
