--- a/src/app/components/appsSection/appsSection.css
+++ b/src/app/components/appsSection/appsSection.css
@@ -21,7 +21,7 @@
     width: var(--image-width);
     height: max-content;
     box-sizing: border-box;
-    overflow: hidden;
+    /* overflow: hidden; */
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -70,6 +70,7 @@
     font-size: 2rem;
     font-weight: 600;
     flex: .7;
+    max-width: max-content;
 }
 
 .myRole-container {
