chnaged favicon, added project overview, problem section, the solution section, design process and demo of the project page

--- a/src/app/components/appsSection/appsSection.css
+++ b/src/app/components/appsSection/appsSection.css
@@ -48,7 +48,7 @@
     justify-content: center;
 }
 
-.workImage-wrapper:hover {
+.workContainer:hover .workImage-wrapper {
     border-radius: 50px;
     transform: scale(.97);
 }
