--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,6 +74,7 @@
 
 :root {
   --bg-color: #0D0D0D;
+  --bg-light-color: #1D1D1D;
   --brown-color: #B7AB98;
   --red-color: #EB5939;
   --padding-left: 15rem;
