--- a/src/app/components/navbarFrame/navbarFrame.css
+++ b/src/app/components/navbarFrame/navbarFrame.css
@@ -115,7 +115,7 @@
     bottom: var(--padding-dist);
     left: 0;
     display: flex;
-    flex-direction: columns;
+    flex-direction: column;
 }
 
 .external-links {
