--- a/src/projectPageComponents/problem/problem.css
+++ b/src/projectPageComponents/problem/problem.css
@@ -2,7 +2,7 @@
 .problem-wrapper {
     width: 100%;
     height: max-content;
-    min-height: 50vh;
+    /* min-height: 50vh; */
 
     display: flex;
     flex-direction: column;
@@ -40,7 +40,7 @@
 .problem-content-wrapper {
     width: 100%;
     height: max-content;
-    min-height: 100%;
+    /* min-height: 100%; */
     flex: 1;
     display: flex;
     flex-direction: column;
