--- a/src/projectPageComponents/solution/solution.css
+++ b/src/projectPageComponents/solution/solution.css
@@ -57,13 +57,17 @@
     width: 100%;
     height: max-content;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap: 1.5rem;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+
+  grid-template-columns: repeat(4, 1fr); /* 4 columns */
+  gap: 1.5rem;
+  justify-content: center;
+  justify-items: center;
 }
 
 .solutionsImg-container {
     height: max-content;
-    width: max-content;
+    width: 100%;
     padding: .5rem;
     background-color: transparent;
     border-radius: 15px;
@@ -83,4 +87,19 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+}
+
+
+.solutions-desc {
+    font-size: 12px;
+    text-align: left;
+    width: 90%;
+}
+
+
+
+.solutions-desc ol {
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
 }
