--- a/src/app/components/appsSection/appsSection.css
+++ b/src/app/components/appsSection/appsSection.css
@@ -16,7 +16,7 @@
     position: relative;
     /* color: white; */
 }
-
+ 
 .workContainer {
     width: var(--image-width);
     height: max-content;
@@ -69,12 +69,12 @@
 .workName {
     font-size: 2rem;
     font-weight: 600;
-    flex: .7;
+    width: 70%;
     max-width: max-content;
 }
 
 .myRole-container {
-    flex: .25;
+    width: 25%;
     font-weight: 800;
     font-size: .9rem;
     text-align: right;
@@ -82,11 +82,96 @@
 }
 
 .work-year {
-    flex: .15;
+    width: 15%;
     font-weight: 700;
     font-size: 1rem;
     display: flex;
     justify-content: flex-end;
     padding-right: 1rem;
     box-sizing: border-box;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* Tab */
+@media (max-width: 992px) {
+    .appsSection-wrapper {
+        --image-width: 70vw;
+        padding-top: 2.5rem;
+        padding-bottom: 2.5rem;
+        padding-left: 2.5rem;
+        gap: 3rem;
+    }
+
+    
+    .workContainer {
+        height: max-content;
+    }
+
+    .workImage-wrapper {
+        height: 400px;
+    }
+
+    
+    .workContainer:hover .workImage-wrapper {
+        border-radius: 0;
+        transform: scale(1);
+    }
+
+    .workName {
+        font-size: 1.8rem;
+    }
+    
+    .myRole-container {
+        font-size: 13px;
+    }
+
+}
+
+
+
+/* Mobile */
+@media (max-width: 575px) {
+    .appsSection-wrapper {
+        --image-width: 85vw;
+    }
+
+
+    .workImage-wrapper {
+        height: 300px;
+    }
+
+    .workInfo-container {
+        flex-direction: column;
+        text-align: center;
+        gap: .3rem;
+    }
+
+    .workName {
+        font-size: 1.5rem;
+        font-weight: 700;
+        width: 100%;
+    }
+
+
+    .myRole-container {
+        text-align: left;
+        display: flex;
+        font-size: 12px;
+        gap: .3rem;
+        min-width: fit-content;
+    }
+
+    .myRole-container p::after {
+        content: ",";
+      }
+
 }
