--- a/src/app/components/cursorCircle/cursorCircle.css
+++ b/src/app/components/cursorCircle/cursorCircle.css
@@ -28,3 +28,11 @@
     mix-blend-mode: difference; /* Example blend mode */
     opacity: 1;
   }
+
+  
+/* Tab */
+@media (max-width: 992px) {
+  .container-div {
+    display: none;
+  }
+}
