--- a/src/app/components/experience/experience.css
+++ b/src/app/components/experience/experience.css
@@ -42,7 +42,7 @@
     bottom: 2.5rem;
     left: var(--padding-left);
 
-    
+
     font-size: .8rem;
     font-weight: 600;
     letter-spacing: 4px;
@@ -55,15 +55,104 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    top: 0;
+    bottom: 0;
     left: 0;
 }
 
 .experienceBG {
     position: absolute;
     right: 5rem;
-    top: 70%;
+    bottom: 0;
     height: max-content;
-    width: 300px;
-    transform: translateY(-50%);
+    width: 500px;
+    opacity: .6;
+}
+
+
+
+
+
+
+
+
+
+
+/* Tab */
+@media (max-width: 992px) {
+    .experience-wrapper {
+        padding-left: 3rem;
+        padding-top: 7rem;
+        height: 100vh;
+        padding-right: 2rem;
+    }
+
+    .experience-content-wrapper {
+        width: 100%;
+    }
+    
+    .experience-overlayText {
+        font-size: 7.5vw;
+        font-weight: 700;
+        line-height: 110%;
+        letter-spacing: -1px;
+    }
+
+    .applications {
+        bottom: 2rem;
+        left: 3rem;
+
+
+        font-size: .8rem;
+        font-weight: 600;
+        letter-spacing: 2px;
+        word-spacing: 6px;
+    }
+
+    .experienceBG {
+        right: -5rem;
+        height: max-content;
+        width: 70%;
+        opacity: .4;
+    }
+
+}
+
+
+
+
+/* Mobile */
+@media (max-width: 575px) {
+    .experience-wrapper {
+        padding-left: 2rem;
+        padding-top: 5rem;
+    }
+
+
+    .experience-section-name {
+        font-size: .7rem;
+        font-weight: 600;
+        letter-spacing: 3px;
+        word-spacing: 7px;
+    }
+
+    .experience-overlayText {
+        font-size: 9.5vw;
+        font-weight: 700;
+        line-height: 110%;
+        letter-spacing: -1px;
+    }
+
+
+    .applications {
+        bottom: 1.5rem;
+    }
+
+
+    .experienceBG {
+        right: -5rem;
+        bottom: 0%;
+        height: max-content;
+        width: 90%;
+        opacity: .8;
+    }
 }
