--- a/src/app/components/motto/motto.css
+++ b/src/app/components/motto/motto.css
@@ -72,3 +72,37 @@
     overflow-y: hidden;
     z-index: 4;
 }
+
+
+
+/* Tab */
+@media (max-width: 992px) {
+
+    .motto-wrapper {
+        height: 70vh;
+        gap: 1.5rem;
+        padding: 1.5rem;
+    }
+
+    .mottoWords {
+        font-size: 11vw;
+        line-height: 100%;
+        letter-spacing: -2px;
+        width: 100%;
+    }
+
+    .mottoBG {
+        height: 100%;
+    }
+}
+
+
+
+
+/* Mobile */
+@media (max-width: 575px) {
+    .mottoWords {
+        font-size: 14vw;
+    }
+
+}
