--- a/src/app/components/navbarFrame/navbarFrame.css
+++ b/src/app/components/navbarFrame/navbarFrame.css
@@ -1,5 +1,5 @@
 .navbarFrame-wrapper {
-    --padding-dist: 4rem; 
+    --padding-dist: 4rem;
     --inactive-menu-color: #b7ab9886;
 
     position: fixed;
@@ -20,13 +20,13 @@
 
 .logo_container {
     position: absolute;
-    top: calc(var(--padding-dist) - .7rem);
-    left: 0;
+    top: calc(var(--padding-dist) - 1.5rem);
+    left: -2rem;
     cursor: pointer;
     /* width: max-content; */
     padding: 1rem;
-    transform: scale(.6);
-    
+    transform: scale(.7);
+
 }
 
 
@@ -71,9 +71,10 @@
     right: 0;
     display: flex;
     flex-direction: columns;
-    
-  backdrop-filter: blur(10px); /* Apply blur filter */
-  -webkit-backdrop-filter: blur(10px);
+
+    backdrop-filter: blur(10px);
+    /* Apply blur filter */
+    -webkit-backdrop-filter: blur(10px);
 }
 
 .menu-items {
@@ -118,10 +119,11 @@
     left: 0;
     display: flex;
     flex-direction: column;
-    
 
-  backdrop-filter: blur(10px); /* Apply blur filter */
-  -webkit-backdrop-filter: blur(10px);
+
+    backdrop-filter: blur(10px);
+    /* Apply blur filter */
+    -webkit-backdrop-filter: blur(10px);
 }
 
 .external-links {
@@ -130,7 +132,7 @@
     box-sizing: border-box;
     gap: 1rem;
 }
- 
+
 
 .soundControl_container {
     box-sizing: border-box;
@@ -144,13 +146,14 @@
     gap: 3rem;
     height: 180px;
     width: 50px;
-    
 
-  backdrop-filter: blur(10px); /* Apply blur filter */
-  -webkit-backdrop-filter: blur(10px);
+
+    backdrop-filter: blur(10px);
+    /* Apply blur filter */
+    -webkit-backdrop-filter: blur(10px);
 }
 
-.soundControl_container:hover p{
+.soundControl_container:hover p {
     color: var(--brown-color);
 }
 
@@ -184,4 +187,48 @@
 
 .soundControl_container p span.off {
     transform: translateY(-100%);
+}
+
+
+
+
+
+
+
+
+
+
+
+/* Tab */
+@media (max-width: 992px) {
+
+    .logo_container {
+        top: calc(var(--padding-dist) - 2.5rem);
+        left: -2.5rem;
+    }
+
+}
+
+
+
+
+
+/* Mobile */
+@media (max-width: 575px) {
+
+    .navbarFrame-wrapper.left {
+        left: 1rem;
+    }
+
+    .navbarFrame-wrapper.right {
+        right: 1rem;
+    }
+
+
+    .logo_container {
+        top: calc(var(--padding-dist) - 2.5rem);
+        left: -2rem;
+        transform: scale(.5);
+
+    }
 }
