--- a/src/app/components/whatTheySaid/whatTheySaid.css
+++ b/src/app/components/whatTheySaid/whatTheySaid.css
@@ -70,3 +70,42 @@
     height: max-content;
     transform: rotate(90deg);
 }
+
+
+
+
+/* Tab */
+@media (max-width: 992px) {
+    .whatTheySaid-wrapper {
+        padding-left: 5rem;
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+    }
+
+    .wts-contentWrapper {
+        width: 100%;
+        gap: 2rem;
+        padding-right: 1rem;
+    }
+}
+
+
+
+
+/* Mobile */
+@media (max-width: 575px) {
+    .whatTheySaid-wrapper {
+        padding-left: 3.5rem;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
+
+    
+.wts-contentWrapper {
+    width: 100%;
+    gap: 2rem;
+    padding-right: 1rem;
+}
+
+    
+}
