--- a/src/app/project/homeMade/homeMade.css
+++ b/src/app/project/homeMade/homeMade.css
@@ -9,3 +9,21 @@
       color: var(--brown-color);
       box-sizing: border-box;
   }
+
+  
+  
+/* Tab */
+@media (max-width: 992px) {
+  .homeMade-wrapper {
+    display: flex;
+    flex-direction: column;
+    }
+  }
+
+
+
+
+/* Mobile */
+@media (max-width: 575px) {
+
+}
