--- a/src/projectPageComponents/devApproach/devApproach.css
+++ b/src/projectPageComponents/devApproach/devApproach.css
@@ -1,4 +1,3 @@
-
 .devApproach-wrapper {
     width: 100%;
     height: max-content;
@@ -6,7 +5,7 @@
 
     background-color: var(--bg-color);
     box-sizing: border-box;
-    
+
     padding: var(--page-padding);
     display: flex;
     flex-direction: column;
@@ -68,10 +67,6 @@
     padding: 1rem;
 }
 
-.sub-sect-contentContainer:empty {
-    grid-template-columns: repeat(3, 1fr); /* Remove the last column */
-  }
-
 .technology-container {
     display: flex;
     flex-direction: column;
@@ -126,4 +121,48 @@
     display: flex;
     flex-direction: column;
     gap: .3rem;
+}
+
+
+
+/* Tab */
+@media (max-width: 992px) {
+    .devApproach-wrapper {
+        width: 100%;
+
+        padding: 3rem;
+        gap: 2rem;
+    }
+
+    .da-section-label {
+        font-size: 1rem;
+        letter-spacing: 2px;
+    }
+
+
+    .sub-sect-contentContainer {
+        grid-template-columns: 1fr 1fr;
+        gap: 1.5rem;
+        padding: 0;
+    }
+}
+
+/* Mobile */
+@media (max-width: 575px) {
+    .devApproach-wrapper {
+        padding: 2rem;
+        gap: 2.5rem;
+    }
+
+    .da-section-label {
+        font-size: .9rem;
+        letter-spacing: 2px;
+    }
+
+
+    .sub-sect-contentContainer {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+    }
+
 }
