--- a/src/projectPageComponents/titleSection/titleSection.css
+++ b/src/projectPageComponents/titleSection/titleSection.css
@@ -1,4 +1,3 @@
-
 .titleSection-wrapper {
     width: 100%;
     height: 55vh;
@@ -10,7 +9,7 @@
     justify-content: center;
     flex-direction: column;
     gap: 2rem;
-    
+
     padding-left: var(--page-padding);
     padding-right: var(--page-padding);
 }
@@ -36,4 +35,43 @@
 
 .projectTitle span {
     color: var(--red-color);
+}
+
+
+
+
+
+/* Tab */
+@media (max-width: 992px) {
+
+    .titleSection-wrapper {
+        gap: 1.5rem;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+    }
+
+
+    .title-section-label {
+        word-spacing: 5px;
+    }
+
+    .projectTitle {
+        font-size: 4.5rem;
+        line-height: 100%;
+        letter-spacing: -2px;
+    }
+
+}
+
+
+
+
+/* Mobile */
+@media (max-width: 575px) {
+
+
+    .projectTitle {
+        font-size: 11.8vw;
+        letter-spacing: -1px;
+    }
 }
