--- a/src/projectPageComponents/solution/solution.css
+++ b/src/projectPageComponents/solution/solution.css
@@ -21,6 +21,7 @@
     position: relative;
     width: max-content;
     padding-bottom: .3rem;
+    max-width: 100%;
 }
 
 .solution-underline {
@@ -50,13 +51,13 @@
     width: max-content;
     padding-bottom: .3rem;
     margin-left: 2rem;
+    max-width: 100%;
 }
 
 .solutions-images-container {
     width: 100%;
     height: max-content;
     display: grid;
-    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
 
     grid-template-columns: repeat(4, 1fr);
     /* 4 columns */
@@ -137,4 +138,20 @@
 
 /* Mobile */
 @media (max-width: 575px) {
+    .solutions-images-container {
+        grid-template-columns: 1fr;
+        gap: 2.5rem;
+    }
+    
+
+.solution-section-label {
+    font-size: .8rem;
+    text-align: center;
+}
+
+
+.favorite-section-label {
+    align-self: center;
+    margin-left: 0;
+}
 }
